# deadBot

./: .env.template  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  arion-compose.nix  flake.nix  redis-sentinel.conf
.config/: hakari.toml
crates/dead-bot/: Cargo.toml  Dockerfile
crates/dead-bot-workspace-hack/: Cargo.toml
crates/dead-bot-workspace-hack/src/: lib.rs
crates/dead-bot/src/: main.rs
dead-bot/: Cargo.nix  Cargo.toml
